<resources>
    <string name="app_name">专业观众验票系统</string>
    <string name="action_settings">Settings</string>

    <!-- common start -->
    <string name="common_isLoading">请稍后...</string>
    <!-- common end -->

    <!-- login start -->
    <string name="login_pwdIsNotNull">用户名/密码不能为空</string>
    <string name="login_pwdIsShort">密码不能少于六位</string>
    <!-- login end -->

    <!-- activity start -->

    <!-- activity end -->

    <!-- result start -->
    <string name="ResultActivity_name">扫面信息</string>
    <string name="SeaInfoActivity_name">查询信息</string>
    <string name="name">姓名</string>
    <string name="account">帐号</string>
    <string name="org_name">所属机构</string>
    <string name="nationality">国籍</string>
    <string name="group_name">团组名称</string>
    <string name="birth_date">出生日期</string>
    <string name="check_time">最后入场时间</string>
    <string name="gender">性别</string>
    <string name="id_card_type">证件类型</string>
    <string name="id_card_no">证件号</string>
    <string name="mobile_phone">手机号</string>
    <string name="email">邮箱</string>
    <string name="company_name">公司名称</string>
    <string name="company_location">公司地址</string>
    <string name="department">公司地址</string>
    <string name="duty">公司地址</string>
    <!-- activity end -->

    <!-- setParams start -->
    <string name="setParams_name">系统设置</string>
    <string name="hostIs">服务器地址：</string>
    <string name="pleHostIs">请输入服务器地址</string>
    <string name="portIs">服务器端口号：</string>
    <string name="plePortIs">请输入服务器端口号</string>
    <string name="hostIsNotNull">服务器地址不能为空</string>
    <string name="portIsNotNull">服务器端口号不能为空</string>
    <string name="connectTimeOut">服务器连接超时</string>
    <string name="saveParams">保存设置</string>
    <string name="saveSuccess">保存成功</string>
    <!-- setParams end -->

    <string name="userInfo_name">用户信息</string>

    <!-- permission start -->
    <string-array name="permissions">
        <item>@string/permission_recode_audio_hint</item>
        <item>@string/permission_get_accounts_hint</item>
        <item>@string/permission_read_phone_hint</item>
        <item>@string/permission_call_phone_hint</item>
        <item>@string/permission_camera_hint</item>
        <item>@string/permission_access_fine_location_hint</item>
        <item>@string/permission_access_coarse_location_hint</item>
        <item>@string/permission_read_external_hint</item>
        <item>@string/permission_white_external_hint</item>
    </string-array>

    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>
    <!-- permission end -->
</resources>
