<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:fadingEdge="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical" >
        <!-- 头像 -->
        <ImageView
            android:id="@+id/facial_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:scaleType="fitCenter"
            android:layout_marginTop="20dp"/>
        <!-- 姓名 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp" />
        <TextView
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#D8D8D8"
            android:gravity="left|top"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
        <!-- 所属团组 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/group_name"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp" />
        <TextView
            android:id="@+id/textGroupName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#D8D8D8"
            android:gravity="left|top"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
        <!-- 性别 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp" />
        <TextView
            android:id="@+id/textGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#D8D8D8"
            android:gravity="left|top"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
        <!-- 证件类型 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_card_type"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp" />
        <TextView
            android:id="@+id/textIdCardType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#D8D8D8"
            android:gravity="left|top"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
        <!-- 证件号 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_card_no"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp" />
        <TextView
            android:id="@+id/textIdCardNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#D8D8D8"
            android:gravity="left|top"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
        <!-- 手机号 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile_phone"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp" />
        <TextView
            android:id="@+id/textMobilePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#D8D8D8"
            android:gravity="left|top"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
        <!-- 邮箱 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp" />
        <TextView
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#D8D8D8"
            android:gravity="left|top"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
        <!-- 公司名称 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp" />
        <TextView
            android:id="@+id/textCompanyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#D8D8D8"
            android:gravity="left|top"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </LinearLayout>
</ScrollView>
